--- a/css/calculator.css
+++ b/css/calculator.css
@@ -22,8 +22,8 @@ body {
     width: 300px;
     padding-bottom: 15px;
     border-radius: 7px;
-    background-color: #0e1d53;
-    box-shadow: 5px 8px 8px -2px rgba(0, 0, 0, 0.61);
+    background-color: #063232;
+    box-shadow: 5px 8px 8px -2px rgb(19, 204, 210);
 }
 /* calculator style end */
 
@@ -36,7 +36,7 @@ body {
     padding: 10px;
     font-size: 2rem;
     background-color: #ffffff;
-    color: #0a1358;
+    color: #2ca52e;
     text-align: right;
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
@@ -59,7 +59,7 @@ button {
     border: none;
     outline: none;
     font-size: 1.5rem;
-    background-color: #743c3c;
+    background-color: #3c743d;
     color: #fff;
     margin: 5px;
 }
